fix: fixed overflow

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -171,10 +171,12 @@
 
   .blog {
     box-sizing: border-box;
+    width: 99%;
 		min-width: 200px;
 		max-width: 980px;
 		margin: 0 auto;
 		padding: 15px;
+    overflow-x: hidden;
   }
 
 }
